--- a/src/Sylius/Bundle/CoreBundle/composer.json
+++ b/src/Sylius/Bundle/CoreBundle/composer.json
@@ -47,7 +47,8 @@
         "sylius/shipping-bundle": "^1.6",
         "sylius/taxation-bundle": "^1.6",
         "sylius/taxonomy-bundle": "^1.6",
-        "sylius/theme-bundle": "^1.5",
+        "sylius/theme-bundle": "^2.1",
+        "sylius/ui-bundle": "^1.6",
         "sylius/user-bundle": "^1.6",
         "sylius-labs/association-hydrator": "^1.1",
         "symfony/framework-bundle": "^4.4",
