--- a/src/Sylius/Bundle/CoreBundle/composer.json
+++ b/src/Sylius/Bundle/CoreBundle/composer.json
@@ -21,7 +21,7 @@
     ],
     "require": {
         "php": "^7.3",
-
+        "doctrine/doctrine-migrations-bundle": "^3.0",
 		"egulias/email-validator": "~2.0",
         "fzaninotto/faker": "^1.6",
         "jms/serializer-bundle": "^2.0",
@@ -35,6 +35,7 @@
         "sylius/customer-bundle": "^1.6",
         "sylius/fixtures-bundle": "^1.4",
         "sylius/inventory-bundle": "^1.6",
+        "sylius/grid-bundle": "^1.8",
         "sylius/locale-bundle": "^1.6",
         "sylius/money-bundle": "^1.6",
         "sylius/order-bundle": "^1.6",
@@ -42,7 +43,7 @@
         "sylius/payum-bundle": "^1.6",
         "sylius/product-bundle": "^1.6",
         "sylius/promotion-bundle": "^1.6",
-        "sylius/resource-bundle": "^1.6",
+        "sylius/resource-bundle": "^1.7",
         "sylius/review-bundle": "^1.6",
         "sylius/shipping-bundle": "^1.6",
         "sylius/taxation-bundle": "^1.6",
@@ -53,10 +54,11 @@
         "sylius-labs/association-hydrator": "^1.1",
         "symfony/framework-bundle": "^4.4",
         "symfony/intl": "^4.4",
-        "winzou/state-machine-bundle": "^0.3",
+        "winzou/state-machine-bundle": "^0.5",
         "liip/imagine-bundle": "^2.3"
     },
     "require-dev": {
+        "doctrine/doctrine-bundle": "^1.12 || ^2.0",
         "hwi/oauth-bundle": "^0.6",
         "matthiasnoback/symfony-config-test": "^4.0",
         "matthiasnoback/symfony-dependency-injection-test": "^3.0",
