--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
         "stof/doctrine-extensions-bundle": "^1.2",
         "swiftmailer/swiftmailer": "^6.0",
         "sylius-labs/association-hydrator": "^1.1",
+        "sylius-labs/polyfill-symfony-event-dispatcher": "^1.0.1",
         "sylius/fixtures-bundle": "^1.4.1",
         "sylius/grid": "^1.6",
         "sylius/grid-bundle": "^1.6",
