--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         "swiftmailer/swiftmailer": "^6.0",
         "sylius-labs/association-hydrator": "^1.1",
         "sylius-labs/polyfill-symfony-event-dispatcher": "^1.0.1",
+        "sylius-labs/polyfill-symfony-framework-bundle": "^1.0",
         "sylius-labs/polyfill-symfony-security": "^1.0",
         "sylius/fixtures-bundle": "^1.4.1",
         "sylius/grid": "^1.6",
