--- a/src/Sylius/Bundle/ReviewBundle/composer.json
+++ b/src/Sylius/Bundle/ReviewBundle/composer.json
@@ -47,8 +47,8 @@
         "symfony/form": "^4.4",
         "symfony/validator": "^4.4",
         "symfony/browser-kit": "^4.4",
-        "symfony/dependency-injection": "^4.4",
-        "symfony/security-bundle": "^4.4",
+        "symfony/dependency-injection": "^5.4",
+        "symfony/security-bundle": "^5.4"
         "symfony/swiftmailer-bundle": "^3.1",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0"
     },
