--- a/src/Sylius/Bundle/ShopBundle/composer.json
+++ b/src/Sylius/Bundle/ShopBundle/composer.json
@@ -31,7 +31,7 @@
         "sylius/core-bundle": "^1.6",
         "sylius/ui-bundle": "^1.6",
         "symfony/framework-bundle": "^5.4",
-        "symfony/security-bundle": "^4.4",
+        "symfony/security-bundle": "^5.4"
         "twig/intl-extra": "^2.12",
         "twig/twig": "^2.12"
     },
@@ -41,7 +41,7 @@
         "mockery/mockery": "^1.3",
         "phpspec/phpspec": "^5.0",
         "phpunit/phpunit": "^7.0",
-        "symfony/dependency-injection": "^4.4"
+        "symfony/dependency-injection": "^5.4"
     },
     "config": {
         "bin-dir": "bin"
