--- a/src/Sylius/Bundle/UserBundle/composer.json
+++ b/src/Sylius/Bundle/UserBundle/composer.json
@@ -48,8 +48,8 @@
         "php-http/guzzle6-adapter": "^1.1",
         "phpspec/phpspec": "^5.0",
         "phpunit/phpunit": "^7.0",
-        "symfony/dependency-injection": "^4.4",
-        "symfony/security-bundle": "^4.4",
+        "symfony/dependency-injection": "^5.4",
+        "symfony/security-bundle": "^5.4"
         "symfony/swiftmailer-bundle": "^3.1"
     },
     "conflict": {
