--- a/src/Sylius/Bundle/UiBundle/composer.json
+++ b/src/Sylius/Bundle/UiBundle/composer.json
@@ -28,9 +28,9 @@
         "sonata-project/block-bundle": "^4.0",
         "sylius/grid-bundle": "^1.6",
         "symfony/framework-bundle": "^5.4",
-        "symfony/security": "^4.4",
-        "symfony/security-bundle": "^5.4"
-        "symfony/templating": "^4.4",
+        "symfony/security": "^5.4",
+        "symfony/security-bundle": "^5.4",
+        "symfony/templating": "^5.4",
         "zendframework/zend-stdlib": "^3.1"
     },
     "require-dev": {
@@ -39,7 +39,7 @@
         "phpspec/phpspec": "^5.0",
         "phpunit/phpunit": "^7.0",
         "symfony/dependency-injection": "^5.4",
-        "symfony/form": "^4.4",
+        "symfony/form": "^5.4",
         "twig/twig": "^2.0"
     },
     "conflict": {
