--- a/src/Sylius/Bundle/ReviewBundle/composer.json
+++ b/src/Sylius/Bundle/ReviewBundle/composer.json
@@ -48,7 +48,7 @@
         "symfony/validator": "^5.4",
         "symfony/browser-kit": "^5.4",
         "symfony/dependency-injection": "^5.4",
-        "symfony/security-bundle": "^5.4"
+        "symfony/security-bundle": "^5.4",
         "symfony/swiftmailer-bundle": "^3.1",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0"
     },
