--- a/src/Sylius/Bundle/ShopBundle/composer.json
+++ b/src/Sylius/Bundle/ShopBundle/composer.json
@@ -31,7 +31,7 @@
         "sylius/core-bundle": "^1.6",
         "sylius/ui-bundle": "^1.6",
         "symfony/framework-bundle": "^5.4",
-        "symfony/security-bundle": "^5.4"
+        "symfony/security-bundle": "^5.4",
         "twig/intl-extra": "^2.12",
         "twig/twig": "^2.12"
     },
