--- a/src/Sylius/Bundle/UserBundle/composer.json
+++ b/src/Sylius/Bundle/UserBundle/composer.json
@@ -49,7 +49,7 @@
         "phpspec/phpspec": "^5.0",
         "phpunit/phpunit": "^7.0",
         "symfony/dependency-injection": "^5.4",
-        "symfony/security-bundle": "^5.4"
+        "symfony/security-bundle": "^5.4",
         "symfony/swiftmailer-bundle": "^3.1"
     },
     "conflict": {
