--- a/composer.json
+++ b/composer.json
@@ -122,8 +122,8 @@
         "mockery/mockery": "^1.3",
         "pamil/prophecy-common": "^0.1",
         "phpspec/phpspec": "^6.1",
-        "phpstan/phpstan": "0.12.70",
-        "phpstan/phpstan-doctrine": "0.12.3",
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-doctrine": "^0.12",
         "phpstan/phpstan-webmozart-assert": "0.12.0",
         "phpunit/phpunit": "^8.5",
         "psalm/plugin-mockery": "^0.7.0",
