--- a/src/Sylius/Component/User/composer.json
+++ b/src/Sylius/Component/User/composer.json
@@ -32,8 +32,7 @@
 
         "doctrine/collections": "^1.1",
         "sylius/resource": "^1.6",
-        "symfony/polyfill-mbstring": "^1.6",
-        "symfony/security": "^4.4"
+        "symfony/polyfill-mbstring": "^1.6"
     },
     "require-dev": {
         "phpspec/phpspec": "^5.0"
