--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "ext-gd": "*",
         "behat/transliterator": "^1.1",
         "doctrine/collections": "^1.3",
-        "doctrine/doctrine-bundle": "^2.0",
+        "doctrine/doctrine-bundle": "^1.12 || <2.7",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.7",
         "egulias/email-validator": "~2.0",
