--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "doctrine/collections": "^1.3",
         "doctrine/doctrine-bundle": "^1.12 || <2.7",
         "doctrine/doctrine-migrations-bundle": "^3.1",
-        "doctrine/orm": "^2.7",
+        "doctrine/orm": "<2.11",
         "egulias/email-validator": "~2.0",
         "friendsofsymfony/oauth-server-bundle": "^1.6",
         "friendsofsymfony/rest-bundle": "^3.0",
