--- a/src/Sylius/Bundle/AttributeBundle/Resources/config/serializer/Model.Attribute.yml
+++ b/src/Sylius/Bundle/AttributeBundle/Resources/config/serializer/Model.Attribute.yml
@@ -29,9 +29,9 @@ Sylius\Component\Attribute\Model\Attribute:
             groups: [Detailed]
         translations:
             expose: true
-            type: array
+            type: iterable
             groups: [Default, Detailed]
         configuration:
             expose: true
-            type: array
+            type: iterable
             groups: [Detailed]
