--- a/src/Sylius/Bundle/AddressingBundle/Resources/config/serializer/Model.Country.yml
+++ b/src/Sylius/Bundle/AddressingBundle/Resources/config/serializer/Model.Country.yml
@@ -17,7 +17,7 @@ Sylius\Component\Addressing\Model\Country:
             groups: [Detailed]
         provinces:
             expose: true
-            type: array
+            type: iterable
             groups: [Detailed]
     relations:
         -   rel: self
