--- a/src/Sylius/Bundle/AddressingBundle/Resources/config/serializer/Model.Zone.yml
+++ b/src/Sylius/Bundle/AddressingBundle/Resources/config/serializer/Model.Zone.yml
@@ -25,7 +25,7 @@ Sylius\Component\Addressing\Model\Zone:
             groups: [Detailed]
         members:
             expose: true
-            type: array
+            type: iterable
             groups: [Detailed]
         createdAt:
             expose: true
