--- a/src/Sylius/Bundle/AdminApiBundle/Resources/config/serializer/Model.Product.yml
+++ b/src/Sylius/Bundle/AdminApiBundle/Resources/config/serializer/Model.Product.yml
@@ -11,19 +11,19 @@ Sylius\Component\Core\Model\Product:
             groups: [Default, Detailed]
         images:
             expose: true
-            type: array
+            type: iterable
             groups: [Default, Detailed]
         channels:
             expose: true
-            type: array
+            type: iterable
             groups: [Detailed]
         reviews:
             expose: true
-            type: array
+            type: iterable
             groups: [Detailed]
         productTaxons:
             expose: true
-            type: array
+            type: iterable
             groups: [Detailed]
         mainTaxon:
             expose: true
